--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <h1>Image Scrambler</h1>
         
             <div class="flexrow">
-                <div id="imageurlcontainer" class="textentrybox">
+                <div id="imageurlcontainer" class="flexcolumn">
                     <p>Image URL</p>
                     <input type="text" id="imageurlinput">
                 </div>
-                <div id="localfilecontainer" class="textentrybox" style="display: none;">
+                <div id="localfilecontainer" class="flexcolumn" style="display: none;">
                     <p>Local File</p>
                     <input type="file" id="imagefileinput" accept="image/*">
                 </div>
@@ -29,12 +29,17 @@
                 <button id="useimageurlbutton" style="display: none;">Use Image URL Instead</button>
             </div>
 
+            <div class="flexcolumn">
+                <p id="blocksizetext">Block Size: 1</p>
+                <input type="range" id="blocksizesilder" name="blocksizesilder" min="1" max="8" value="1">
+            </div>
+
             <div class="flexrow">
-                <div class="textentrybox">
+                <div class="flexcolumn">
                     <p>Password</p>
                     <input type="password" id="passwordinput">
                 </div>
-                <div class="textentrybox">
+                <div class="flexcolumn">
                     <p>IV</p>
                     <input type="password" id="ivinput">
                 </div>
