--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="flexcolumn">
-                <p id="blocksizetext">Block Size: 1</p>
+                <p id="blocksizetext"></p>
                 <input type="range" id="blocksizesilder" name="blocksizesilder" min="1" max="8" value="1">
             </div>
 
@@ -50,6 +50,7 @@
             <div class="flexrow">
                 <button id="scramblebutton">Scramble</button>
                 <button id="unscramblebutton">Unscramble</button>
+                <button id="saveimagebutton">Save Image</button>
             </div>
 
             <div style="height: 10px;"></div>
