Added direct link option

--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
                 <button id="scramblebutton">Scramble</button>
                 <button id="unscramblebutton">Unscramble</button>
                 <button id="saveimagebutton">Save Image</button>
+                <button id="createlinkbutton">Create Direct Link</button>
             </div>
 
             <div style="height: 10px;"></div>
+
+            <p id="directlinkoutput" style="text-align: center;"></p>
 
             <canvas id="imagecanvas"></canvas>
 
