--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <body>
         <div class="maincontainer">
             <h1>Image Scrambler</h1>
+
+            <div class="flexrow">
+                <button id="themebutton">Change Color Theme</button>
+                <a href="https://github.com/SpotsBoi/imagescrambler" target="_blank"><button>View Code on GitHub</button></a>
+            </div>
         
             <div class="flexrow">
                 <div id="imageurlcontainer" class="flexcolumn">
@@ -73,8 +78,6 @@
                     <li>Although scrambling an image will make it hard to visually identify it, there are other methods of identification that may still work. Since the pixel data is only rearranged without changing any of the colors, a histogram analysis of a scrambled image will give the same result as the original image. Compressing the scrambled image can throw off the colors significantly, but it may still be possible to identify it.</li>
                     <br>
                     <li>If the block size is set too large, it may become possible for a computer to unscramble the image by comparing the edges of the blocks.</li>
-                    <br>
-                    <li>The source code for this tool can be found on GitHub: <a href="https://github.com/SpotsBoi/imagescrambler" target="_blank">https://github.com/SpotsBoi/imagescrambler</a>.</li>
                 </ul>
             </div>
         </div>
