Added show/hide password button

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
                 <input type="range" id="blocksizesilder" name="blocksizesilder" min="0" max="4" value="0">
             </div>
 
-            <div class="flexrow">
-                <div class="flexcolumn">
-                    <p>Password</p>
+            <div class="flexcolumn">
+                <p>Password</p>
+                <div class="flexrow">
                     <input type="password" id="passwordinput">
+                    <button id="showhidepasswordbutton">Show</button>
                 </div>
             </div>
 
